<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_calendar"
        android:title="@string/tab_calendar"
        android:icon="@drawable/ic_event_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export" />
    <item
        android:id="@+id/action_sync"
        android:title="@string/action_sync" />
    <item
        android:id="@+id/action_export_pdf"
        android:title="@string/action_export_pdf" />
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import" />
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/action_delete_all" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about" />
</menu>
