<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toggle_favourite"
        android:icon="@drawable/ic_star_circle_outline"
        android:title="@string/action_add_favourite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_experiences"
        android:title="@string/action_experiences" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit" />
    <item
        android:id="@+id/action_share_recipe"
        android:title="@string/action_share_recipe" />
    <item
        android:id="@+id/action_delete_recipe"
        android:title="@string/action_delete_recipe" />
</menu>
